--- a/package.json
+++ b/package.json
@@ -8,17 +8,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^5.9.1",
-    "@react-navigation/native": "^5.7.5",
+    "@react-native-community/picker": "1.6.6",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/native": "^5.7.6",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "native-base": "^2.13.14",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.1"
+    "react-native-web": "^0.13.18",
+    "react-native-webview": "10.7.0",
+    "react-navigation": "^4.4.2",
+    "expo-av": "~8.6.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
