--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
     "expo": "~39.0.2",
+    "expo-av": "~8.6.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "native-base": "^2.13.14",
@@ -21,11 +22,11 @@
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-dimension": "^1.0.6",
     "react-native-screens": "~2.10.1",
     "react-native-web": "^0.13.18",
     "react-native-webview": "10.7.0",
-    "react-navigation": "^4.4.2",
-    "expo-av": "~8.6.0"
+    "react-navigation": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
