--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo-av": "~8.6.0",
     "expo-font": "~8.3.0",
     "expo-linking": "^1.0.4",
+    "expo-permissions": "^9.3.0",
     "expo-status-bar": "~1.0.2",
     "native-base": "^2.13.14",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-image-picker": "^2.3.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "^0.13.18",
     "react-native-webview": "10.7.0",
