--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
     "expo-font": "~8.3.0",
+    "expo-image-manipulator": "^8.3.0",
     "expo-image-picker": "^9.1.1",
     "expo-linking": "^1.0.4",
     "expo-permissions": "^9.3.0",
@@ -26,6 +27,7 @@
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^2.3.4",
     "react-native-screens": "~2.10.1",
     "react-native-web": "^0.13.18",
