--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-base64": "^0.1.4",
     "react-native-image-picker": "^2.3.4",
     "react-native-screens": "~2.10.1",
+    "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "^0.13.18",
     "react-native-webview": "10.7.0",
     "react-navigation": "^4.4.2"
