--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/picker": "1.6.6",
     "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/drawer": "^5.9.3",
     "@react-navigation/native": "^5.7.6",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.12.0",
@@ -28,8 +29,9 @@
     "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-animatable": "^1.3.3",
-    "react-native-image-base64": "^0.1.4",
+    "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.4",
+    "react-native-reanimated": "^1.13.1",
     "react-native-screens": "~2.10.1",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "^0.13.18",
