--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-prettier": "^6.12.0",
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
+    "expo-cli": "^3.28.2",
     "expo-font": "~8.3.0",
     "expo-image-manipulator": "^8.3.0",
     "expo-image-picker": "^9.1.1",
