--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-picker": "^2.3.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-screens": "~2.10.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-web": "^0.13.18",
     "react-native-webview": "10.7.0",
